--- a/package.json
+++ b/package.json
@@ -24,14 +24,20 @@
   },
   "homepage": "https://github.com/guardiantrust/bunker-api#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.1",
     "loadash": "0.0.1",
     "lodash": "^4.17.4",
-    "mongoose": "^4.11.0",
+    "minio": "^3.1.3",
+    "mongoose": "^4.11.1",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
+    "passport-jwt": "^2.2.1",
+    "password-hash": "^1.2.2",
+    "redis": "^2.7.1",
+    "winston": "^2.3.1"
   }
 }
