--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "minio": "^3.1.3",
     "mongoose": "^4.11.1",
     "morgan": "^1.8.2",
+    "no-kafka": "^3.2.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "password-hash": "^1.2.2",
