--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.15.3",
     "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.1",
+    "kafka-node": "^2.0.1",
     "loadash": "0.0.1",
     "lodash": "^4.17.4",
     "minio": "^3.1.3",
