--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "joi": "^10.6.0",
+    "json-stringify": "^1.0.0",
     "jsonwebtoken": "^7.4.1",
     "kafka-node": "^2.0.1",
     "loadash": "0.0.1",
