--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
+    "eslint": "^4.5.0",
     "express": "^4.15.3",
     "joi": "^10.6.0",
     "json-stringify": "^1.0.0",
@@ -40,10 +41,12 @@
     "mongoose": "^4.11.1",
     "morgan": "^1.8.2",
     "no-kafka": "^3.2.0",
+    "node-datetime": "^2.0.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "password-hash": "^1.2.2",
     "redis": "^2.7.1",
+    "time": "^0.12.0",
     "winston": "^2.3.1"
   }
 }
