--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-jwt": "^2.2.1",
     "password-hash": "^1.2.2",
     "redis": "^2.7.1",
+    "restify": "^5.2.0",
     "time": "^0.12.0",
     "winston": "^2.3.1"
   }
